v3.11.1 (XXXX-XX-XX)
--------------------

* Invalid keys are now reported as individual errors for batch insert operations
  and no longer abort the whole batch.

* BTS-1255: Fix sporadic memory usage accounting underflows in in-memory cache
  subsystem.
  Also turn the algorithm for freeing memory from a cache's buckets from a
  non-deterministic one that did not guarantee progress into a bounded algorithm
  with guaranteed progress.

* ECONNABORTED is treated as a ConnectionClosed error in fuerte.

* Database drop operation no longer fails if we cannot remove the corresponding
  permissions from the _users collection.

* Added startup option `--query.max-collections-per-query` to adjust the limit
  for the maximum number of collections/shards per query. The option defaults to
  `2048`, which is equivalent to the previous hardcoded value.

* BTS-1261 For some named graphs in cluster, when creating a debugDump for a
  traversal query that would use the graph's name, the graph wouldn't be able to
  be recreated because the info gathered in the process of creating a debugDump
  was broken. It uses the result form an aql explain to get the graph info and
  use in the debugDump, but this wouldn't be available because, instead of
  having the name of the graph as key in the graph object of the explain, there
  would be an array with edge collection names. It was changed for the case when
  there's a named graph, but maintained when there's no access to the graph's
  name.

* When trying to read multiple documents, the coordinator will now handle empty
  lists gracefully and return an empty result set instead of an error.

* Added metric "rocksdb_total_sst_files" to count the number of sst files,
  aggregated over all levels of the LSM tree.

* Increase too short timeouts for requests made from coordinators to DB-servers
  when retrieving the number of documents or the index selectivity estimates for