@@ -88,6 +88,9 @@ if (USE_JEMALLOC)
   set(JEMALLOC_HOME "${JEMALLOC_HOME}" PARENT_SCOPE)
   set(SYS_LIBS ${SYS_LIBS} jemalloc PARENT_SCOPE)
   set(JEMALLOC_LIB "${JEMALLOC_LIB}" PARENT_SCOPE)
+  if (USE_JEMALLOC_PROF AND USE_LIBUNWIND)
+    add_dependencies(jemalloc_build libunwind_build)
+  endif()
 endif ()
 
 ################################################################################
